welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:40: error: Unit does not take parameters
droite();avance();gauche();avance()() 
                                   ^